@@ -1,5 +1,11 @@
 2004-08-08  Michael Koch  <konqueror@gmx.de>
 
+	* javax/swing/JMenuItem.java
+	(getMenuDragMouseListeners): New method.
+	(getMenuKeyListeners): Likewise.
+
+2004-08-08  Michael Koch  <konqueror@gmx.de>
+
 	* javax/swing/AbstractButton.java
 	(model): Made protected.
 	(actionListener): Likewise.
